# cpplot

./: CMakeLists.txt
examples/: ex101_creating_a_plot.cc  ex102_mouse_and_keyboard_events.cc  ex103_multiple_plots.cc  ex104_style_and_color.cc  ex105_axes.cc  ex106_surface_and_contour.cc  ex107_3d_line_and_surface.cc  ex108_animation.cc
include/cpplot/: cpplot.hpp  cpplot_common.hpp  math.hpp  scatter.hpp
src/: CMakeLists.txt  axes.cpp  figure.cpp  line.cpp  patch.cpp  scatter.cpp  surface.cpp
